re PR tree-optimization/51683 (__builtin_memcpy etc. with constant first argument optimized away by ccp)

PR tree-optimization/51683
	* tree-ssa-propagate.c (substitute_and_fold): Don't optimize away
	calls with side-effects.
	* tree-ssa-ccp.c (ccp_fold_stmt): Likewise.

	* gcc.dg/pr51683.c: New test.

From-SVN: r182761